2006-12-05  Werner Koch  <wk@g10code.com>

	* about/people/person-koch.en.xml: Removed me as HoO.  Also for
	translations.

2006-11-14  Werner Koch  <wk@g10code.com>

	* help/thankgnus/linuxhotel.png: New.
	* help/thankgnus/donors-2003.en.xml: Changed name from Reinhard
	Wiesemann to Linuxhotel on his request.  Add logo.
	* help/thankgnus/donors-2004.en.xml: Ditto.
	* help/thankgnus/donors-2005.en.xml: Ditto.
	* help/thankgnus/donors-2006.en.xml: Ditto.

2004-01-01  Jonathan Grant < jg at jguk . org>
	* projects/swpat/letter-20041206.en.xhtml: Removed white space which 
	  was part of link.
	* projects/swpat/letter-20041206.en.xhtml: Removed white space which 
	  was part of link.

	* index.xhtml: "March 10th 2001" -> "10 March 2001"

2004-09-04  Jonathan Grant < jg at jguk . org>
	* about/members.en.xhtml: -ize -> -ise. Minor English spelling revision.

2004-08-19  Jonathan Grant < jg at jguk . org>
	* about/self-conception.en.xhtml: Minor English spelling revision.

2004-08-15  Jonathan Grant < jg at jguk . org>
	* about/self-conception.en.xhtml: Minor English grammar, spelling and
	punctuation revisions.

2004-08-15  Jonathan Grant < jg at jguk . org>
	* help/donate-2004-uk.en.xhtml:
	* news/2004/news-20040701.en.xhtml: Minor English grammar revisions.

2004-08-10  Werner Koch  <wk@g10code.de>

	* help/donate-2002.xhtml: Add link to UK donation details.
	* help/donate-2004-uk.en.xhtml: New.

2004-08-03  Jonathan R. Grant < jg at jguk . org>
	* projects/swpat/letter-20040802.en.xhtml: Change footer signature text
	"Chapter Italy" -> "Italian chapter".

	* projects/swpat/letter-20040510.en.xhtml:
	* projects/swpat/letter-20040706.en.xhtml:
	* tools/texts-en.xml:
	English grammar revised slightly.

2004-08-01  Jonathan R. Grant < jg at jguk . org>
	* help/webpage/Webpage-Structure.txt: English spelling and grammar 
	revisions.
	Some missing hyphens added.

2004-07-28  Jonathan R. Grant < jg at jguk . org>