@@ -81,7 +81,7 @@
       </p>
       <p>
         <label for="email">E-mail</label>
-        <input id="email" name="email" type="email" />
+        <input id="email" name="email" type="text" />
       </p>
       <p>
         <label for="group">Group or association (optional)</label>
@@ -90,6 +90,9 @@
       <p>
         <label for="contact">Would you be available to get in contact with the institution?</label>
         <input id="contact" name="contact" type="checkbox"/>
+      </p>
+      <p style="position: absolute; top: -9999px; left: -9999px;">
+        <input id="url" name="url" type="text"/>
       </p>
       <p style="text-align:center">
         <input type="submit" value="Submit" />
