@@ -1,0 +1,2 @@
+This directory contains files that are to be runtime-processed by Template
+Toolkit.
